网络层内容

--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -93,3 +93,81 @@ C类用于**小型局域网（LAN）**，如中小企业或家庭网络。
 | `127.0.0.1` ～ `127.255.255.255` | 回环地址（Loopback），常用 `127.0.0.1` 表示本地测试          |
 | `255.255.255.255`                | 广播地址                                                     |
 | 私有地址（不可在公网使用）       | A类：`10.0.0.0/8`   B类：`172.16.0.0/12`   C类：`192.168.0.0/16` |
+
+###  一条信息从源主机传递到目标主机的过程如下：
+
+1.**源主机判断目标位置**
+ 源主机根据目标主机的 **IP 地址** 和自己的 **子网掩码**，判断目标是否在同一子网。
+
+- 如果在同一子网内：可以直接通信；
+- 如果不在同一子网：必须通过**默认网关（路由器）**转发。
+
+------
+
+2.**源主机确定下一跳的 MAC 地址**
+ 源主机查自己的 ARP 缓存：
+
+- 若目标在同一子网，则通过 ARP 查到 **目标主机的 MAC 地址**；
+- 若目标在不同子网，则通过 ARP 查到 **默认网关的 MAC 地址**。
+
+然后源主机用：
+
+```
+源IP = 自己IP
+目的IP = 目标主机IP
+源MAC = 自己的MAC
+目的MAC = 下一跳设备的MAC（可能是路由器）
+```
+
+来封装帧。
+
+------
+
+3.**路由器逐跳转发**
+ 路由器收到帧后：
+
+- 拆掉旧的帧头（MAC 信息）；
+
+- 检查 IP 地址，看数据包该往哪个子网走；
+
+- TTL–1，重新计算 IP 校验和；
+
+- 查路由表确定下一跳；
+
+- 重新封装新的帧头：
+
+  ```
+  源MAC = 当前路由器接口的MAC
+  目的MAC = 下一跳设备的MAC
+  ```
+
+发送到下一个链路。
+
+💡 **此时路由器不改 IP 地址，只改 MAC 地址。**
+
+------
+
+4.**数据包到达目标子网**
+ 当数据包到达目标子网的最后一个路由器时：
+
+- 路由器通过 ARP 解析出目标主机的 MAC 地址；
+- 用该 MAC 地址封装帧；
+- 把帧交给交换机；
+- 交换机根据 MAC 地址表找到目标主机的端口；
+- 数据帧被送达目标主机。
+
+------
+
+5.**目标主机接收数据**
+ 目标主机收到帧后：
+
+- 检查目的 MAC 是否是自己；
+- 解封装链路层帧 → 网络层 IP；
+- 检查目的 IP 是否匹配；
+- 若匹配，则上交给上层协议（TCP/UDP）。
+
+
+
+NAT:公有ip地址与私人地址的转换器，用来应对ipv4地址的枯竭。
+
+PAT：将私有ip映射到公有ip的不同端口
