--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -1,5 +1,11 @@
 # 计算机网络
 
+## 体系
+
+![image-20251113145334568](./media/image-20251113145334568.png)
+
+![image-20251113163921746](./media/image-20251113163921746.png)
+
 ## 网络模型
 
 ### OSI七层网络模型
@@ -171,3 +177,24 @@ C类用于**小型局域网（LAN）**，如中小企业或家庭网络。
 NAT:公有ip地址与私人地址的转换器，用来应对ipv4地址的枯竭。
 
 PAT：将私有ip映射到公有ip的不同端口
+
+## 传输层协议
+
+HTTP：80端口
+
+HTTPS：443端口
+
+FTP：20 21端口（两条TCP连接，一条控制连接，一条传输数据）
+
+SSH：22端口
+
+
+
+当使用一个服务时：
+
+1）客户端随机挑一个端口（比如 50321）
+
+2）连接服务器的固定端口（比如 443）
+
+3）服务器通过同一个连接把数据返回给客户端
+
