--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -20,7 +20,7 @@
 
 这种模式涉及到一个单一的类，该类负责创建自己的对象，同时确保只有单个对象被创建。这个类提供了一种访问其唯一的对象的方式，可以直接访问，不需要实例化该类的对象。
 
-单例模式是一种创建型设计模式，它确保一个类只有一个实例，并提供了一个全局访问点来访问该实例。
+单例模式是一种创建型设计模式，它确保一个类只有一个实例（bean对象），并提供了一个全局访问点来访问该实例。
 
 ### 设计思路
 
